--- a/frontend/src/app/components/cart/checkout/checkout.component.html
+++ b/frontend/src/app/components/cart/checkout/checkout.component.html
@@ -4,110 +4,94 @@
             <div class="billing-address">
                 <h4 class="title">Billing Address</h4>
                 <div class="checkout-info">
-                    <form action="#">
+                    <form class="formwidth" [formGroup]="billingForm" (ngSubmit)="onSubmit()">
                         <h6>Personal Information</h6>
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="input-item input-item-name ltn__custom-icon">
-                                    <input type="text" name="ltn__name" placeholder="First name">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>First Name</mat-label>
+                                    <input matInput type="text" formControlName="firstName">
+                                    <mat-error *ngIf="!billingForm.controls['firstName'].valid && billingForm.controls['firstName'].touched">First name is required</mat-error>
+                                </mat-form-field>
                             </div>
                             <div class="col-md-6">
-                                <div class="input-item input-item-name ltn__custom-icon">
-                                    <input type="text" name="ltn__lastname" placeholder="Last name">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>Last Name</mat-label>
+                                    <input matInput type="text" formControlName="lastName">
+                                </mat-form-field>
                             </div>
                             <div class="col-md-6">
-                                <div class="input-item input-item-email ltn__custom-icon">
-                                    <input type="email" name="ltn__email" placeholder="email address">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>Email</mat-label>
+                                    <input matInput type="email" placeholder="Email" formControlName="email" />
+                                    <mat-error
+                                        *ngIf=" !billingForm.controls['email'].valid && billingForm.controls['email'].touched">
+                                        <span *ngIf="billingForm.controls['email'].errors?.['required']">Email is required</span>
+                                        <span *ngIf="billingForm.controls['email'].errors?.['pattern']">Email is not valid</span>
+                                    </mat-error>
+                                </mat-form-field>
                             </div>
                             <div class="col-md-6">
-                                <div class="input-item input-item-phone ltn__custom-icon">
-                                    <input type="text" name="ltn__phone" placeholder="phone number">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="input-item input-item-website ltn__custom-icon">
-                                    <input type="text" name="ltn__company" placeholder="Company name (optional)">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="input-item input-item-website ltn__custom-icon">
-                                    <input type="text" name="ltn__phone" placeholder="Company address (optional)">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>Phone Number</mat-label>
+                                    <input matInput type="text" formControlName="phoneNo">
+                                    <mat-error
+                                        *ngIf=" !billingForm.controls['phoneNo'].valid && billingForm.controls['phoneNo'].touched">
+                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['required']">Phone number is required</span>
+                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['pattern']">Phone number is not valid</span>
+                                    </mat-error>
+                                </mat-form-field>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4 col-md-6">
-                                <h6>Country</h6>
-                                <div class="input-item">
-                                    <select class="nice-select" >
-                                        <option>Select Country</option>
-                                        <option>Australia</option>
-                                        <option>Canada</option>
-                                        <option>China</option>
-                                        <option>Morocco</option>
-                                        <option>Saudi Arabia</option>
-                                        <option>United Kingdom (UK)</option>
-                                        <option>United States (US)</option>
-                                    </select>
-                                    <div class="nice-select" tabindex="0" style="display: none;"><span class="current">Select Country</span>
-                                        <ul class="list">
-                                            <li data-value="Select Country" class="option selected">Select Country</li>
-                                            <li data-value="Australia" class="option">Australia</li>
-                                            <li data-value="Canada" class="option">Canada</li>
-                                            <li data-value="China" class="option">China</li>
-                                            <li data-value="Morocco" class="option">Morocco</li>
-                                            <li data-value="Saudi Arabia" class="option">Saudi Arabia</li>
-                                            <li data-value="United Kingdom (UK)" class="option">United Kingdom (UK)</li>
-                                            <li data-value="United States (US)" class="option">United States (US)</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
+                            <div class="col-lg-12">
                                 <h6>Address</h6>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <div class="input-item">
-                                            <input type="text" placeholder="House number and street name">
-                                        </div>
+                                        <mat-form-field class="full-width-field">
+                                            <mat-label>Address</mat-label>
+                                            <input matInput type="text" formControlName="address" placeholder="House number and street name">
+                                            <mat-error *ngIf="!billingForm.controls['address'].valid && billingForm.controls['address'].touched">Address is required</mat-error>
+                                        </mat-form-field>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="input-item">
-                                            <input type="text" placeholder="Apartment, suite, unit etc. (optional)">
-                                        </div>
+                                        <mat-form-field class="full-width-field">
+                                            <mat-label>Country</mat-label>
+                                            <mat-select formControlName="country">
+                                                <mat-option *ngFor="let country of countries" [value]="country">
+                                                    {{country}}
+                                                </mat-option>
+                                            </mat-select>
+                                            <mat-error *ngIf="!billingForm.controls['country'].valid && billingForm.controls['country'].touched">Country is required</mat-error>
+                                        </mat-form-field>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6">
                                 <h6>Town / City</h6>
-                                <div class="input-item">
-                                    <input type="text" placeholder="City">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>City</mat-label>
+                                    <input matInput type="text" formControlName="city">
+                                    <mat-error *ngIf="!billingForm.controls['city'].valid && billingForm.controls['city'].touched">City is required</mat-error>
+                                </mat-form-field>
                             </div>
                             <div class="col-lg-4 col-md-6">
                                 <h6>State </h6>
-                                <div class="input-item">
-                                    <input type="text" placeholder="State">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>State</mat-label>
+                                    <input matInput type="text" formControlName="state">
+                                    <mat-error *ngIf="!billingForm.controls['state'].valid && billingForm.controls['state'].touched">State is required</mat-error>
+                                </mat-form-field>
                             </div>
                             <div class="col-lg-4 col-md-6">
                                 <h6>Zip</h6>
-                                <div class="input-item">
-                                    <input type="text" placeholder="Zip">
-                                </div>
+                                <mat-form-field class="full-width-field">
+                                    <mat-label>Zip</mat-label>
+                                    <input matInput type="text" formControlName="zip">
+                                    <mat-error *ngIf="!billingForm.controls['zip'].valid && billingForm.controls['zip'].touched">Zip code is required</mat-error>
+                                </mat-form-field>
                             </div>
                         </div>
-                        <p><label class="input-info-save mb-0"><input type="checkbox" name="agree"> Create an
-                                account?</label></p>
-                        <h6>Order Notes (optional)</h6>
-                        <div class="input-item input-item-textarea ltn__custom-icon">
-                            <textarea name="ltn__message"
-                                placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                        </div>
-
                     </form>
                 </div>
             </div>
@@ -116,24 +100,11 @@
             <div class="payment-method">
                 <h4 class="title">Payment Method</h4>
                 <mat-accordion>
-                    <mat-expansion-panel (opened)="panelOpenState = true">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>
-                                <mat-radio-button class="example-radio-button"
-                                    [value]="panelOpenState"></mat-radio-button>
-                                Check payments
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p>
-                            Please send a check to Store Name, Store Street, Store Town, Store
-                            State / County, Store Postcode.
-                        </p>
-                    </mat-expansion-panel>
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <mat-radio-button class="example-radio-button"
-                                    [value]="panelOpenState"></mat-radio-button>
+                                <mat-radio-button  [(ngModel)]="paymentMode" class="payment-mode"
+                                    value="cod"></mat-radio-button>
                                 Cash on delivery</mat-panel-title>
                         </mat-expansion-panel-header>
                         <p>Pay with cash upon delivery.</p>
@@ -141,8 +112,7 @@
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <mat-radio-button class="example-radio-button"
-                                    [value]="panelOpenState"></mat-radio-button>
+                                <mat-radio-button [(ngModel)]="paymentMode" class="payment-mode" value="paypal"></mat-radio-button>
                                 PayPal
                             </mat-panel-title>
                         </mat-expansion-panel-header>
@@ -159,7 +129,7 @@
                         in our privacy policy.
                     </p>
                 </div>
-                <button class="btn place-order-btn">PLACE ORDER</button>
+                <button class="custom-button place-order-btn">PLACE ORDER</button>
             </div>
         </div>
         <div class="col-lg-6">
