--- a/frontend/src/app/components/cart/checkout/checkout.component.scss
+++ b/frontend/src/app/components/cart/checkout/checkout.component.scss
@@ -1,4 +1,9 @@
 .checkout-container{
+    margin-bottom: 5%;
+
+    .full-width-field {
+        width: 100%;
+    }
 
     .title{
         margin-bottom: 30px;
@@ -26,18 +31,6 @@
         margin: 30px 0;
         p{
             font-size: 14px;
-        }
-    }
-
-    .place-order-btn {
-        background-color: var(--custom__secondary-color);
-        color: var(--white);
-        border-radius: 0%;
-
-        &:hover {
-            color: var(--custom__heading-color);
-            background-color: var(--white);
-            border-color: var(--border-color-2);
         }
     }
 
