--- a/frontend/src/app/components/product/product-list/product-list.component.scss
+++ b/frontend/src/app/components/product/product-list/product-list.component.scss
@@ -1,87 +1,5 @@
 .product-list-section {
   margin-bottom: 100px;
-  .product-item {
-    border: 2px solid;
-    border-color: var(--border-color-8);
-    transition: all 0.3s ease 0s;
-    margin-bottom: 50px;
-    position: relative;
-    text-align: center;
-    z-index: 10;
-
-    &:hover {
-      box-shadow: var(--custom__box-shadow-1);
-
-      .product-actions {
-        top: 50%;
-        visibility: visible;
-        opacity: 1;
-      }
-    }
-
-    img {
-      vertical-align: middle;
-      border-style: none;
-      border-radius: 0;
-    }
-
-    .product-info {
-      background-color: var(--white);
-      padding: 25px 30px 15px;
-    }
-
-    .product-title {
-      font-size: 16px;
-      margin-bottom: 3px;
-
-      &:hover {
-        color: var(--custom__secondary-color) !important;
-        cursor: pointer;
-      }
-    }
-
-    .product-price {
-      font-size: 20px;
-      color: var(--custom__secondary-color);
-      font-weight: 700;
-      margin-bottom: 12px;
-    }
-
-    .product-actions {
-      position: absolute;
-      top: 70%;
-      left: 0;
-      right: 0;
-      text-align: center;
-      transform: translateY(-50%);
-      opacity: 0;
-      visibility: hidden;
-      transition: all 0.3s ease 0s;
-      z-index: 100;
-      ul > li {
-        height: 50px;
-        width: 50px;
-        line-height: 50px;
-        font-size: 14px;
-        text-align: center;
-        float: left;
-        margin: 0 5px;
-
-        & > a {
-          border-radius: 100%;
-          box-shadow: var(--custom__box-shadow-3);
-          display: block;
-          background-color: var(--white);
-
-          i {
-            color: var(--custom__primary-color);
-            font-size: 20px;
-            cursor: pointer;
-          }
-        }
-      }
-    }
-  }
 
   .product-filters {
     .filter {
@@ -179,15 +97,17 @@
 
     .cart-plus-minus {
       border: 2px solid;
-      height: 40px;
-      line-height: 36px;
-      width: 90px;
+      height: 63px;
+      line-height: 56px;
+      width: 140px;
       text-align: center;
+      border-color: var(--border-color-11);
     }
 
     .dec.quantityButton {
       float: left;
       border-right: 2px solid;
+      border-color: var(--border-color-11);
     }
 
     .quantityButton {
@@ -198,19 +118,13 @@
     .inc.quantityButton {
       float: right;
       border-left: 2px solid;
+      border-color: var(--border-color-11);
     }
 
     .add-to-cart {
-      background-color: var(--custom__secondary-color);
-      color: var(--white);
-      height: 40px;
+      height: 63px;
 			margin-left: 10px;
-			transition: all 0.3s ease 0s;
-
-      &:hover {
-        color: var(--custom__heading-color);
-				background-color: var(--white);
-      }
+      padding: 15px 20px;
     }
   }
 }
