--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,15 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import 'ngx-toastr/toastr-bs5-alert';
 
 :root {
   --custom__primary-color: #071c1f;
-  --custom__primary-color-2: #041113; /* Darken */
-  --custom__primary-color-3: #133236; /* Lighten */
+  --custom__primary-color-2: #041113;
+  /* Darken */
+  --custom__primary-color-3: #133236;
+  /* Lighten */
   --custom__secondary-color: #80b500;
   /* --custom__secondary-color: #e53e29; */
-  --custom__secondary-color-2: #699403; /* Darken */
-  --custom__secondary-color-3: #a2da1c; /* Lighten */
+  --custom__secondary-color-2: #699403;
+  /* Darken */
+  --custom__secondary-color-3: #a2da1c;
+  /* Lighten */
   --custom__heading-color: #071c1f;
   --custom__paragraph-color: #071c1f;
 
@@ -23,53 +28,63 @@
   --custom__color-4: #84a2a6;
 
   /* Gradient Colors */
-  --gradient-color-1: linear-gradient(
-    90deg,
-    rgba(242, 139, 194, 1) 0%,
-    rgba(216, 177, 242, 1) 50%
-  );
-  --gradient-color-2: linear-gradient(
-    to top,
-    rgba(7, 28, 31, 0) 0%,
-    rgba(7, 28, 31, 1) 90%
-  );
-  --gradient-color-3: linear-gradient(
-    to bottom,
-    rgba(7, 28, 31, 0) 0%,
-    rgba(7, 28, 31, 1) 90%
-  );
-  --gradient-color-4: linear-gradient(
-    to top,
-    rgba(242, 246, 247, 0) 0%,
-    rgba(242, 246, 247, 1) 90%
-  );
+  --gradient-color-1: linear-gradient(90deg,
+      rgba(242, 139, 194, 1) 0%,
+      rgba(216, 177, 242, 1) 50%);
+  --gradient-color-2: linear-gradient(to top,
+      rgba(7, 28, 31, 0) 0%,
+      rgba(7, 28, 31, 1) 90%);
+  --gradient-color-3: linear-gradient(to bottom,
+      rgba(7, 28, 31, 0) 0%,
+      rgba(7, 28, 31, 1) 90%);
+  --gradient-color-4: linear-gradient(to top,
+      rgba(242, 246, 247, 0) 0%,
+      rgba(242, 246, 247, 1) 90%);
 
   /* Background Colors */
-  --section-bg-1: #f7f5eb; /* White */
+  --section-bg-1: #f7f5eb;
+  /* White */
   /* --section-bg-1: #F2F6F7; /* White */
-  --section-bg-2: #071c1f; /* Black */
+  --section-bg-2: #071c1f;
+  /* Black */
 
-  --section-bg-5: #272829; /* Black */
-  --section-bg-6: #fdfdfd; /* White */
+  --section-bg-5: #272829;
+  /* Black */
+  --section-bg-6: #fdfdfd;
+  /* White */
 
   /* Border Colors */
-  --border-color-1: #e5eaee; /* White */
-  --border-color-2: #1e2021; /* Black */
-  --border-color-3: #576466; /* Black */
-  --border-color-4: #eb6954; /* Red */
-  --border-color-5: #bc3928; /* Red */
-  --border-color-6: #103034; /* Black */
-  --border-color-7: #d1dae0; /* White */
-  --border-color-8: #f6f6f6; /* White */
-  --border-color-9: #e4ecf2; /* White */
-  --border-color-10: #ebeeee; /* White */
-  --border-color-11: #ededed; /* White */
-  --border-color-12: #e1e6ff; /* White */
+  --border-color-1: #e5eaee;
+  /* White */
+  --border-color-2: #1e2021;
+  /* Black */
+  --border-color-3: #576466;
+  /* Black */
+  --border-color-4: #eb6954;
+  /* Red */
+  --border-color-5: #bc3928;
+  /* Red */
+  --border-color-6: #103034;
+  /* Black */
+  --border-color-7: #d1dae0;
+  /* White */
+  --border-color-8: #f6f6f6;
+  /* White */
+  --border-color-9: #e4ecf2;
+  /* White */
+  --border-color-10: #ebeeee;
+  /* White */
+  --border-color-11: #ededed;
+  /* White */
+  --border-color-12: #e1e6ff;
+  /* White */
 
   /* Box Shadow Colors */
   --custom__box-shadow-1: 0 16px 32px 0 rgba(7, 28, 31, 0.1);
-  --custom__box-shadow-2: 0 0 4px rgba(0, 0, 0, 0.1); /* like border */
-  --custom__box-shadow-3: 0 1px 6px 0 rgba(54, 56, 61, 0.15); /* like border GGL */
+  --custom__box-shadow-2: 0 0 4px rgba(0, 0, 0, 0.1);
+  /* like border */
+  --custom__box-shadow-3: 0 1px 6px 0 rgba(54, 56, 61, 0.15);
+  /* like border GGL */
   --custom__box-shadow-4: 0 5px 20px 0 rgba(23, 44, 82, 0.1);
   --custom__box-shadow-5: 0 8px 16px 0 rgba(93, 93, 93, 0.1);
   // --custom__box-shadow-6: 0 8px 16px 0 rgba(229, 62, 41, 0.70);
@@ -128,6 +143,7 @@ $sub-color: #d8c3a5;
 $dim-color: #8e8d8a;
 $text-color: #e98074;
 $text-color1: #e85a4f;
+
 * {
   box-sizing: border-box;
 }
@@ -144,35 +160,37 @@ body {
 
 #main {
   position: relative;
+
   .navbar-brand img {
     max-width: 120px;
   }
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="submit"],
-textarea {
-  background-color: var(--white);
-  border: 2px solid;
-  border-color: var(--border-color-9);
-  height: 65px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  padding-left: 20px;
-  font-size: 16px;
-  color: var(--custom__paragraph-color);
-  width: 100%;
-  margin-bottom: 30px;
-  border-radius: 0;
-  padding-right: 40px;
-}
+// input[type="text"],
+// input[type="email"],
+// input[type="password"],
+// input[type="submit"],
+// textarea {
+//   background-color: var(--white);
+//   border: 2px solid;
+//   border-color: var(--border-color-9);
+//   height: 65px;
+//   -webkit-box-shadow: none;
+//   box-shadow: none;
+//   padding-left: 20px;
+//   font-size: 16px;
+//   color: var(--custom__paragraph-color);
+//   width: 100%;
+//   margin-bottom: 30px;
+//   border-radius: 0;
+//   padding-right: 40px;
+// }
 
 html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -204,7 +222,7 @@ a {
   color: var(--custom__primary-color);
 }
 
-ul > li {
+ul>li {
   list-style: none;
 }
 
@@ -236,9 +254,11 @@ img {
   width: 100% !important;
   height: 100% !important;
   overflow: hidden;
+
   .modal-dialog {
     margin-top: 150px;
   }
+
   .btn-close {
     position: absolute;
     height: 5px;
@@ -288,15 +308,17 @@ img {
   background: var(--white);
 }
 
-.mdc-data-table__cell{
+.mdc-data-table__cell {
   color: var(--custom__primary-color);
 }
 
-.mdc-data-table__cell, .mdc-data-table__header-cell {
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
   border-bottom: 1px solid var(--border-color-1);
 }
 
-.mdc-data-table__cell, .mdc-data-table__header-cell:first-child{
+.mdc-data-table__cell,
+.mdc-data-table__header-cell:first-child {
   border-top: 1px solid var(--border-color-1);
 }
 
@@ -314,11 +336,84 @@ img {
   color: var(--custom__heading-color) !important;
 }
 
-.mat-mdc-radio-button.mat-mdc-radio-checked .mdc-radio__background::before{
+.mat-mdc-radio-button.mat-mdc-radio-checked .mdc-radio__background::before {
   background-color: var(--custom__secondary-color) !important;
   border-color: var(--custom__secondary-color) !important;
 }
 
 .mat-mdc-radio-button .mdc-radio .mdc-radio__native-control:enabled+.mdc-radio__background .mdc-radio__inner-circle {
   border-color: var(--custom__secondary-color) !important;
+}
+
+.mdc-text-field:not(.mdc-text-field--disabled) .mdc-floating-label {
+  color: black !important;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background: transparent !important;
+}
+
+.mdc-text-field .mdc-text-field__input {
+  caret-color: var(--mdc-theme-primary, --custom__secondary-color);
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
+.mdc-text-field--filled .mdc-line-ripple::after{
+  border-bottom-color: var(--custom__secondary-color) !important;
+}
+
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__leading,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__notch,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__trailing {
+  border-color: var(--custom__secondary-color) !important;
+}
+
+.mat-mdc-select-arrow,
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
+  color: var(--custom__secondary-color) !important;
+}
+
+.mdc-text-field:not(.mdc-text-field--disabled) .mdc-text-field__input,
+.mat-mdc-select {
+  color: var(--custom__heading-color) !important;
+}
+
+.mdc-text-field--invalid .mdc-text-field__input,
+.mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-floating-label {
+  color: var(--mdc-theme-error, #f44336) !important;
+  caret-color: var(--mdc-theme-error, #f44336) !important;
+}
+
+// .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-floating-label {
+//   color: var(--mdc-theme-error, #f44336);
+// }
+
+.toast-container .ngx-toastr .toast-message,
+.toast-container .ngx-toastr .toast-title {
+  color: var(--white) !important;
+}
+
+.toast-success {
+  background-color: var(--custom__secondary-color) !important;
+}
+
+.custom-button {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: var(--custom__heading-font);
+  text-align: center;
+  cursor: pointer;
+  padding: 15px 40px;
+  background: linear-gradient(to right, white 50%, var(--custom__secondary-color)50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  border: 1px solid transparent;
+  transition: all 0.3s ease 0s;
+  color: var(--white);
+
+  &:hover {
+    background-position: left bottom;
+    color: var(--custom__heading-color);
+    border: 1px solid var(--custom__heading-color)
+  }
 }
