--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,6 +3,16 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import 'ngx-toastr/toastr-bs5-alert';
 
+@font-face {
+  font-family: "Titillium Web";
+  src: url(./assets/fonts/TitilliumWeb-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PT Sans Narrow";
+  src: url(./assets/fonts/PTSansNarrow-Regular.ttf) format("truetype");
+}
+
 :root {
   --custom__primary-color: #071c1f;
   --custom__primary-color-2: #041113;
@@ -18,28 +28,14 @@
   --custom__heading-color: #071c1f;
   --custom__paragraph-color: #071c1f;
 
-  --custom__heading-font: "Rajdhani", sans-serif;
-  --custom__body-font: "Open Sans", sans-serif;
+  --custom__heading-font: "Titillium Web", sans-serif;
+  --custom__body-font: "PT Sans Narrow", sans-serif;
 
   /* Footer ACD2D8 8CB2B2  */
   --custom__color-1: #8cb2b2;
   --custom__color-2: #acd2d8;
   --custom__color-3: #a3bcc0;
   --custom__color-4: #84a2a6;
-
-  /* Gradient Colors */
-  --gradient-color-1: linear-gradient(90deg,
-      rgba(242, 139, 194, 1) 0%,
-      rgba(216, 177, 242, 1) 50%);
-  --gradient-color-2: linear-gradient(to top,
-      rgba(7, 28, 31, 0) 0%,
-      rgba(7, 28, 31, 1) 90%);
-  --gradient-color-3: linear-gradient(to bottom,
-      rgba(7, 28, 31, 0) 0%,
-      rgba(7, 28, 31, 1) 90%);
-  --gradient-color-4: linear-gradient(to top,
-      rgba(242, 246, 247, 0) 0%,
-      rgba(242, 246, 247, 1) 90%);
 
   /* Background Colors */
   --section-bg-1: #f7f5eb;
@@ -94,55 +90,7 @@
   --black: #000000;
   --black-2: #22355b;
   --white: #fff;
-  --white-2: #f2f6f7;
-  --white-3: #e8edee;
-  --white-4: #e6ecf0;
-  --white-5: #f0f4f7;
-  --white-6: #f1f1f1;
-  --white-7: #f7f7f7;
-  --white-8: #fafafa;
-  --white-9: #f2f7fa;
-  --red: #ff0000;
-  --red-2: #f34f3f;
-  --red-3: #db483b;
-  --silver: #c0c0c0;
-  --gray: #808080;
-  --maroon: #800000;
-  --yellow: #ffff00;
-  --olive: #808000;
-  --lime: #00ff00;
-  --green: #008000;
-  --aqua: #00ffff;
-  --teal: #008080;
-  --blue: #0000ff;
-  --navy: #000080;
-  --fuchsia: #ff00ff;
-  --purple: #800080;
-  --pink: #ffc0cb;
-  --nude: #ebc8b2;
-  --orange: #ffa500;
-  --ratings: #ffb800;
-
-  /* social media colors */
-  --facebook: #365493;
-  --twitter: #3cf;
-  --linkedin: #0077b5;
-  --pinterest: #c8232c;
-  --dribbble: #ea4c89;
-  --behance: #131418;
-  --google-plus: #dd4b39;
-  --instagram: #e4405f;
-  --vk: #3b5998;
-  --wechat: #7bb32e;
-  --youtube: #cb2027;
-  --email: #f89a1e;
 }
-
-$main-color: #eae7dc;
-$sub-color: #d8c3a5;
-$dim-color: #8e8d8a;
-$text-color: #e98074;
-$text-color1: #e85a4f;
 
 * {
   box-sizing: border-box;
@@ -166,34 +114,9 @@ body {
   }
 }
 
-// input[type="text"],
-// input[type="email"],
-// input[type="password"],
-// input[type="submit"],
-// textarea {
-//   background-color: var(--white);
-//   border: 2px solid;
-//   border-color: var(--border-color-9);
-//   height: 65px;
-//   -webkit-box-shadow: none;
-//   box-shadow: none;
-//   padding-left: 20px;
-//   font-size: 16px;
-//   color: var(--custom__paragraph-color);
-//   width: 100%;
-//   margin-bottom: 30px;
-//   border-radius: 0;
-//   padding-right: 40px;
-// }
-
 html,
 body {
   height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 h1,
@@ -222,7 +145,7 @@ a {
   color: var(--custom__primary-color);
 }
 
-ul>li {
+ul > li {
   list-style: none;
 }
 
@@ -230,66 +153,6 @@ img {
   max-width: 100%;
   vertical-align: middle;
   border-style: none;
-}
-
-.btn {
-  border-radius: 0 !important;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 700 !important;
-  font-family: var(--custom__heading-font);
-  padding: 15px 40px !important;
-  text-align: center;
-  transition: all 0.3s ease 0s !important;
-  position: relative;
-  z-index: 1;
-}
-
-.modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.modal {
-  width: 100% !important;
-  height: 100% !important;
-  overflow: hidden;
-
-  .modal-dialog {
-    margin-top: 150px;
-  }
-
-  .btn-close {
-    position: absolute;
-    height: 5px;
-    width: 3px;
-    line-height: 33px;
-    right: 15px;
-    left: auto;
-    top: 13px;
-    opacity: 1;
-    z-index: 1;
-    transition: all 0.3s ease 0s;
-    font-size: 10px;
-    font-weight: 700;
-  }
-
-  .modal-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    pointer-events: auto;
-    background-color: var(--white);
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 0.3rem;
-    outline: 0;
-  }
-
-  .modal-body {
-    padding: 15px;
-  }
 }
 
 .mat-mdc-slider .mdc-slider__track--inactive,
@@ -410,6 +273,7 @@ img {
   border: 1px solid transparent;
   transition: all 0.3s ease 0s;
   color: var(--white);
+  border-radius: 0 !important;
 
   &:hover {
     background-position: left bottom;
