--- a/frontend/src/app/components/cart/checkout/checkout.component.html
+++ b/frontend/src/app/components/cart/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="checkout-container container">
+<div class="checkout-container container" *ngIf="!orderPlaced; else orderPlacedContent">
     <div class="row">
         <div class="col-lg-12">
             <div class="billing-address">
@@ -11,7 +11,9 @@
                                 <mat-form-field class="full-width-field">
                                     <mat-label>First Name</mat-label>
                                     <input matInput type="text" formControlName="firstName">
-                                    <mat-error *ngIf="!billingForm.controls['firstName'].valid && billingForm.controls['firstName'].touched">First name is required</mat-error>
+                                    <mat-error
+                                        *ngIf="!billingForm.controls['firstName'].valid && billingForm.controls['firstName'].touched">First
+                                        name is required</mat-error>
                                 </mat-form-field>
                             </div>
                             <div class="col-md-6">
@@ -26,8 +28,10 @@
                                     <input matInput type="email" placeholder="Email" formControlName="email" />
                                     <mat-error
                                         *ngIf=" !billingForm.controls['email'].valid && billingForm.controls['email'].touched">
-                                        <span *ngIf="billingForm.controls['email'].errors?.['required']">Email is required</span>
-                                        <span *ngIf="billingForm.controls['email'].errors?.['pattern']">Email is not valid</span>
+                                        <span *ngIf="billingForm.controls['email'].errors?.['required']">Email is
+                                            required</span>
+                                        <span *ngIf="billingForm.controls['email'].errors?.['pattern']">Email is not
+                                            valid</span>
                                     </mat-error>
                                 </mat-form-field>
                             </div>
@@ -37,8 +41,10 @@
                                     <input matInput type="text" formControlName="phoneNo">
                                     <mat-error
                                         *ngIf=" !billingForm.controls['phoneNo'].valid && billingForm.controls['phoneNo'].touched">
-                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['required']">Phone number is required</span>
-                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['pattern']">Phone number is not valid</span>
+                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['required']">Phone number
+                                            is required</span>
+                                        <span *ngIf="billingForm.controls['phoneNo'].errors?.['pattern']">Phone number
+                                            is not valid</span>
                                     </mat-error>
                                 </mat-form-field>
                             </div>
@@ -50,8 +56,11 @@
                                     <div class="col-md-6">
                                         <mat-form-field class="full-width-field">
                                             <mat-label>Address</mat-label>
-                                            <input matInput type="text" formControlName="address" placeholder="House number and street name">
-                                            <mat-error *ngIf="!billingForm.controls['address'].valid && billingForm.controls['address'].touched">Address is required</mat-error>
+                                            <input matInput type="text" formControlName="address"
+                                                placeholder="House number and street name">
+                                            <mat-error
+                                                *ngIf="!billingForm.controls['address'].valid && billingForm.controls['address'].touched">Address
+                                                is required</mat-error>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-md-6">
@@ -62,7 +71,9 @@
                                                     {{country}}
                                                 </mat-option>
                                             </mat-select>
-                                            <mat-error *ngIf="!billingForm.controls['country'].valid && billingForm.controls['country'].touched">Country is required</mat-error>
+                                            <mat-error
+                                                *ngIf="!billingForm.controls['country'].valid && billingForm.controls['country'].touched">Country
+                                                is required</mat-error>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -72,7 +83,9 @@
                                 <mat-form-field class="full-width-field">
                                     <mat-label>City</mat-label>
                                     <input matInput type="text" formControlName="city">
-                                    <mat-error *ngIf="!billingForm.controls['city'].valid && billingForm.controls['city'].touched">City is required</mat-error>
+                                    <mat-error
+                                        *ngIf="!billingForm.controls['city'].valid && billingForm.controls['city'].touched">City
+                                        is required</mat-error>
                                 </mat-form-field>
                             </div>
                             <div class="col-lg-4 col-md-6">
@@ -80,7 +93,9 @@
                                 <mat-form-field class="full-width-field">
                                     <mat-label>State</mat-label>
                                     <input matInput type="text" formControlName="state">
-                                    <mat-error *ngIf="!billingForm.controls['state'].valid && billingForm.controls['state'].touched">State is required</mat-error>
+                                    <mat-error
+                                        *ngIf="!billingForm.controls['state'].valid && billingForm.controls['state'].touched">State
+                                        is required</mat-error>
                                 </mat-form-field>
                             </div>
                             <div class="col-lg-4 col-md-6">
@@ -88,7 +103,9 @@
                                 <mat-form-field class="full-width-field">
                                     <mat-label>Zip</mat-label>
                                     <input matInput type="text" formControlName="zip">
-                                    <mat-error *ngIf="!billingForm.controls['zip'].valid && billingForm.controls['zip'].touched">Zip code is required</mat-error>
+                                    <mat-error
+                                        *ngIf="!billingForm.controls['zip'].valid && billingForm.controls['zip'].touched">Zip
+                                        code is required</mat-error>
                                 </mat-form-field>
                             </div>
                         </div>
@@ -103,7 +120,7 @@
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <mat-radio-button  [(ngModel)]="paymentMode" class="payment-mode"
+                                <mat-radio-button [(ngModel)]="paymentMode" class="payment-mode"
                                     value="cod"></mat-radio-button>
                                 Cash on delivery</mat-panel-title>
                         </mat-expansion-panel-header>
@@ -112,7 +129,8 @@
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <mat-radio-button [(ngModel)]="paymentMode" class="payment-mode" value="paypal"></mat-radio-button>
+                                <mat-radio-button [(ngModel)]="paymentMode" class="payment-mode"
+                                    value="paypal"></mat-radio-button>
                                 PayPal
                             </mat-panel-title>
                         </mat-expansion-panel-header>
@@ -157,3 +175,20 @@
         </div>
     </div>
 </div>
+
+<ng-template #orderPlacedContent>
+    <div class="checkout-container container">
+        <div class="row text-center">
+            <div class="col-12">
+                <img class="img-responsive text-center" src="../../../../assets/images/icons/imgs/delivery.gif" alt="Order placed" />
+            </div>
+            <div class="col-12">
+                <b class="fs-1">Order Successfully Placed.</b>
+                <p>
+                    Hi {{userName}}!, Thank you for your order! <br>
+                    Your order is being processed.
+                </p>
+            </div>
+        </div>
+    </div>
+</ng-template>
