--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -50,6 +50,7 @@ footer {
     .social-icons li {
         display: inline-block;
         padding: 0 2em 0 0;
+        cursor: pointer;
 
         &:hover {
             color: var(--custom__secondary-color);
