--- a/frontend/src/app/components/product/product-list/product-list.component.scss
+++ b/frontend/src/app/components/product/product-list/product-list.component.scss
@@ -28,9 +28,10 @@
     .category {
       font-weight: 700;
       font-size: 14px;
+      cursor: pointer;
 
+      & .active,
       &:hover {
-        cursor: pointer;
         color: var(--custom__secondary-color) !important;
       }
     }
