--- a/frontend/src/app/components/product/product-item/product-item.component.html
+++ b/frontend/src/app/components/product/product-item/product-item.component.html
@@ -13,7 +13,7 @@
                     </a>
                 </li>
                 <li>
-                    <a (click)="addToCart(product)">
+                    <a (click)="addProductToCart(product)">
                         <i class="bi bi-cart-plus"></i>
                     </a>
                 </li>
