--- a/frontend/src/app/components/cart/checkout/checkout.component.scss
+++ b/frontend/src/app/components/cart/checkout/checkout.component.scss
@@ -1,5 +1,4 @@
 .checkout-container{
-    margin-bottom: 5%;
 
     .full-width-field {
         width: 100%;
@@ -39,5 +38,9 @@
         max-width: 450px;
         width: 100%;
         margin-top: 50px;
+    }
+
+    .successIcon{
+        color:  var(--custom__secondary-color);
     }
 }
