--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -6,11 +6,11 @@
                     <div class="col-xs-3 col-md-6 col-lg-3 box" *ngFor="let feature of features">
                         <div class="feature-detail d-flex">
                             <div class="feature-icon">
-                                <img src="../../../assets/images/icons/imgs/{{ feature.icon }}.png"
+                                <img src="../../../assets/images/icons/{{ feature.icon }}.png"
                                     alt="feature-icon" />
                             </div>
                             <div class="feature-info">
-                                <h6 class="mb-3">{{ feature.title }}</h6>
+                                <h3 class="mb-3">{{ feature.title }}</h3>
                                 <p class="mb-2">{{ feature.description }}</p>
                             </div>
                         </div>
