--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 #feature-board {
     position: relative;
-    padding: 0 2%;
+    padding: 3% 2% 0;
 
     &::before {
         position: absolute;
