--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,137 +1,104 @@
-<div id="carousel" class="carousel carousel-dark slide">
-    <div class="carousel-indicators">
-        <!-- <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
-            aria-label="Slide 1"></button> -->
-        <!-- <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button> -->
+<div id="carousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/images/slider/slider-1.jpg" class="d-block w-100" alt="carousel-img">
     </div>
-    <div class="carousel-inner d-flex">
-        <!-- <div class="carousel-item active">
-            <div class="container d-flex">
-                <div class="row">
-                    <div class="col-lg-12 align-self-center">
-                        <div class="slider-info text-right">
-                            <div class="title">Our Handpicked Most <br> Favorite Food</div>
-                            <div class="slider-buttons">
-                                <a routerLink="/products" class="custom-button">Explore Products</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider-img img-left">
-                        <img src="../../../assets/images/slider/3.png" alt="slider-img">
-                    </div>
-                </div>
-            </div>
-
-        </div> -->
-        <div class="carousel-item active">
-            <div class="container d-flex">
-                <div class="row">
-                    <div class="col-lg-12 align-self-center">
-                        <div class="slider-info text-left">
-                            <div class="title">Tasty & Healthy <br> Organic Food</div>
-                            <div class="slider-buttons">
-                                <a routerLink="/products" class="custom-button">Explore Products</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider-img img-right">
-                        <img src="../../../assets/images/slider/2.png" alt="slider-img">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="carousel-item">
+      <img src="../../../assets/images/slider/slider-2.jpg" class="d-block w-100" alt="carousel-img">
     </div>
-    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button> -->
+    <div class="carousel-item">
+      <img src="../../../assets/images/slider/slider-3.jpg" class="d-block w-100" alt="carousel-img">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
 <div class="banner container">
-    <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-6 my-2">
-            <div class="banner-img">
-                <a routerLink="/products">
-                    <img src="../../../assets/images/ads/1.png" alt="ads">
-                </a>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6">
-            <div class="row">
-                <div class="col-12 my-2">
-                    <div class="banner-img">
-                        <a routerLink="/products">
-                            <img src="../../../assets/images/ads/2.png" alt="ads">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-12 my-2">
-                    <div class="banner-img">
-                        <a routerLink="/products">
-                            <img src="../../../assets/images/ads/3.png" alt="ads">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-sm-12 col-md-6 my-2">
+      <div class="banner-img">
+        <a routerLink="/products">
+          <img src="../../../assets/images/ads/1.png" class="img-responsive w-100" alt="ads" />
+        </a>
+      </div>
     </div>
+    <div class="col-sm-12 col-md-6">
+      <div class="row">
+        <div class="col-12 my-2">
+          <div class="banner-img">
+            <a routerLink="/products">
+              <img src="../../../assets/images/ads/2.png" class="img-responsive w-100" alt="ads" />
+            </a>
+          </div>
+        </div>
+        <div class="col-12 mt-4 mb-2">
+          <div class="banner-img">
+            <a routerLink="/products">
+              <img src="../../../assets/images/ads/3.png" class="img-responsive w-100" alt="ads" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="product-categories container">
-    <h4 class="text-center my-3">Categories</h4>
-    <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-4">
-            <div class="row">
-                <div class="col-12 my-2">
-                    <div class="category meat">
-                        <div class="name" (click)="navigateToProducts('meat')">
-                            <span>Fish & Meat</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 my-2">
-                    <div class="category fruit">
-                        <div class="name" (click)="navigateToProducts('fruit')">
-                            <span>Fruits</span>
-                        </div>
-
-                    </div>
-                </div>
+  <h4 class="text-center my-3 fs-1">Categories</h4>
+  <div class="row justify-content-center">
+    <div class="col-sm-12 col-md-4">
+      <div class="row">
+        <div class="col-12 my-2">
+          <div class="category meat">
+            <div class="name" (click)="navigateToProducts('fish & meat')">
+              <span>Fish & Meat</span>
             </div>
+          </div>
         </div>
-        <div class="col-sm-12 col-md-4">
-            <div class="row">
-                <div class="col-12 my-2">
-                    <div class="category veg">
-                        <div class="name" (click)="navigateToProducts('veg')">
-                            <span>Vegetables</span>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-12 my-2">
+          <div class="category fruit">
+            <div class="name" (click)="navigateToProducts('fruits')">
+              <span>Fruits</span>
             </div>
+          </div>
         </div>
-        <div class="col-sm-12 col-md-4">
-            <div class="row">
-                <div class="col-12 my-2">
-                    <div class="category beverage">
-                        <div class="name" (click)="navigateToProducts('beverage')">
-                            <span>Beverages</span>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-12 my-2">
-                    <div class="category bread">
-                        <div class="name" (click)="navigateToProducts('bread')">
-                            <span>Bread & Cake</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="col-sm-12 col-md-4">
+      <div class="row">
+        <div class="col-12 my-2">
+          <div class="category veg">
+            <div class="name" (click)="navigateToProducts('vegetables')">
+              <span>Vegetables</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <div class="row">
+        <div class="col-12 my-2">
+          <div class="category beverage">
+            <div class="name" (click)="navigateToProducts('beverages')">
+              <span>Beverages</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 my-2">
+          <div class="category bread">
+            <div class="name" (click)="navigateToProducts('bakery')">
+              <span>Bread & Cake</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
